--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+body{
+  font-family: 'Roboto' ;
+  font-weight: 400;
+  font-size: 14px;
+}
 .nav {
     justify-content: space-between;
 }
@@ -24,10 +29,16 @@
 }
 #banner-home, #mapa {
     margin-top: 60px;
+    border-bottom: 4px solid #fff;  
+}
+#banner-home .background-img{
+  height: calc(100vh - 60px);
 }
 .pad-banner {
+  text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
+    color: #fff;
 }
 footer {
     background-color: black;
@@ -48,4 +59,7 @@ footer {
 
 .conta:hover .middle {
     opacity: 1;
+}
+.btn-danger{
+  border-radius: 10px;
 }
