--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,9 @@ body{
   margin-top:7px;
 }
 .background-img {
-    background-image: url("../img/fotoconvoca.jpg");
+    background: url("../img/fotoconvoca.jpg");
     background-size: cover;
+    background-position-y:40% ;
 }
 #banner-home, #mapa {
     margin-top: 60px;
@@ -66,7 +67,7 @@ footer {
 }
 .ban{
   position: relative;
-  background: url("https://super-travels.com/wp-content/uploads/2017/03/4MjEQfT.jpg");
+  background: url("../img/fotoconvoca-ban.jpg");
   height: 100px;
   padding-top: 10px;
 }
@@ -80,6 +81,7 @@ footer {
 	background: linear-gradient(to left,#002f4b , #FF4000 30%);
 	opacity: .8;
 }
+
 .tex{
   color:#FF4000;
   font-size: 14px;
@@ -123,10 +125,6 @@ footer {
 .nota-monto {
     font-size: 12px !important;
     padding-left: 20px;
-}
-.container-fluid {
-    width: 100% !important;
-    padding: 0;
 }
 .mensaje-donar {
     text-align: center;
