--- a/css/main.css
+++ b/css/main.css
@@ -245,7 +245,7 @@ footer {
     items-align: center;
 }
 .bloque2_bloque {
-    width: 70%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -431,12 +431,18 @@ footer {
     margin-bottom: 10px;
 }
 .btn-datos {
-    background: #E20613 !important;
+  border-radius: 15px;
+    background: #A60B12 ;
     font-family: dinot-bold;
     border: 0;
     color: #fff;
     padding: 3px 18px 6px;
     font-size: 18px;
+    transition: all .6s ease;
+}
+.btn-datos:hover{
+   box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.43);
+
 }
 
 .modal-body p {
