--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,9 @@ body{
   padding-right: 10px;
 }
 .logo2{
-  height: 30px;
+  height: 40px;
   padding-left: 10px;
-  width: 100px;
+  width: 120px;
   border-left: 2px solid #fff;
 }
 .navbar-left li{
@@ -29,6 +29,34 @@ body{
     background-size: cover;
     background-position-y:40% ;
 }
+#men-t{
+  font-size: 12px;
+  font-weight: bold;
+  transition: all .6s ease;
+}
+#men-ti{
+  font-size: 12px;
+  font-weight: bold;
+  transition: all .6s ease;
+}
+#men-t:hover{
+  color:#A60B12;
+  background: transparent;
+  transform: scale(1.1);
+}
+#men-ti:hover{
+  color:#A60B12;
+  background: transparent;
+  transform: scale(1.1);
+}
+#men-btn{
+  padding:5px 30px;
+  transition: all .6s ease;
+}
+#men-btn:hover{
+  background:#A60B12;
+  transform: scale(1.1);
+}
 #banner-home, #mapa {
     margin-top: 60px;
     border-bottom: 6px solid #fff;
@@ -41,6 +69,8 @@ body{
     padding-top: 200px;
     padding-bottom: 200px;
     color: #fff;
+    font-size: 16px;
+
 }
 footer {
     background-color: black;
@@ -769,9 +799,10 @@ footer {
 .martop-ban {
     font-size: 45px;
     margin-top: 30px;
+    padding-left: 40px;
 }
 .btn-danger {
-    background-color: #A60B12 !important;
+    background-color: #A60B12 ;
     border-color: #A60B12 !important;
 }
 
