--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body{
   margin-top:7px;
 }
 .background-img {
-    background: url("../img/fotoconvoca.jpg");
+    background: url("../img/fotom.png");
     background-size: cover;
     background-position-y:40% ;
 }
