--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-  font-family: 'Roboto' ;
+    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 400;
   font-size: 14px;
 }
