--- a/css/modal.css
+++ b/css/modal.css
@@ -45,12 +45,14 @@ body{
 }
 .btn-danger-modal{
   background: #A60B12;
-  border:1px solid #A60B12;
+  border:1px solid #A60B12 !important;
   color: #fff;
   border-radius: 10px;
   padding: 10px 60px;
   transition: all .6s ease;
   font-weight: bold;
+  display: inline-block !important;
+  margin: 1em 0 1em 0% !important;
 }
 .btn-danger-modal:hover{
   background: #000;
@@ -63,4 +65,46 @@ body{
 .p-modal{
   font-size: 12px;
   text-align: justify;
+}
+
+
+.pano{
+  width: 100%;
+  height: 100%;
+  background: green;
+}
+.flec{
+  position: absolute;
+  top: 15%;
+  left: 1%;
+}
+.pano:hover{
+  display: none;
+}
+.indicates-required{
+    text-align: center !important;
+}
+#mc_embed_signup .mc-field-group{
+  padding-bottom: 1% !important;
+}
+#mc_embed_signup .mc-field-group label{
+  text-align:center;
+}
+#mc_embed_signup .clear{
+  text-align: center;
+  margin-left: -2.5%;
+}
+#mc_embed_signup .button{
+  padding: 5px 70px !important;
+  height: 40px !important;
+  background-color: #A60B12 !important;
+  border:1px solid #A60B12 !important;
+  color: #fff !important;
+  transition: all .6s ease;
+  margin-top: 1% !important;
+}
+#mc_embed_signup .button:hover{
+  background-color: #000 !important;
+  color: #A60B12 !important;
+
 }
